add VkProfile method and update docs
