# docs/swagger.yaml
@@ -206,6 +206,36 @@ paths:
       summary: Login by VK
       tags:
       - login
+  /profile/{id}/vk:
+    get:
+      consumes:
+      - application/json
+      description: Get VK profile by user id
+      operationId: vk-profile
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "409":
+          description: Conflict
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Get VK profile
+      tags:
+      - profiles
   /register:
     post:
       consumes:
